AMVP-651 Modified Xilinx PTP v2 Driver To Support 16 Ports
Added device tree parameter xlnx,num-of-ports can be set to the
number of ports synthesised in the programmable logic. It can be
set between 1 and 16. If it is omitted, it defaults to 1.

--- a/Documentation/devicetree/bindings/ptp/ptp-xilinx.yaml
+++ b/Documentation/devicetree/bindings/ptp/ptp-xilinx.yaml
@@ -24,6 +24,14 @@ properties:
     description: |
       Offset and length of the register set for the device.
 
+  num-of-ports:
+    category: optional
+    type: int
+    description: |
+      Number of ports populated in the IP.
+    constraint: |
+      v > 0 && v <= 16
+
 required:
   - compatible
   - reg
